# ifconfig-cli

./: Cargo.toml  LICENSE  README.md
app/: Cargo.toml
app/src/: lib.rs
cmd/: Cargo.toml
cmd/src/ifconfig/: main.rs
domain/: Cargo.toml
domain/src/: lib.rs  types.rs
